# OOP-Game-Project-RichMan

./: .clang-format  .gitignore  monopoly.sln
enc_temp_folder/57d038f02baf4afcd3e3064bbf1a1cd/: Game.cpp
enc_temp_folder/ae3e05a40344b912bcf31fd168dfa2c/: Board.cpp
enc_temp_folder/d8c3c4b99b9a64bcb17b25a14529a4c7/: Game.cpp
monopoly/: Bank.cpp  Bank.hpp  BarrierCard.cpp  BarrierCard.hpp  Board.cpp  Board.hpp  Card.hpp  CardStore.cpp  CardStore.hpp  DestroyCard.cpp  DestroyCard.hpp  DestroyPropertyCard.cpp  DestroyPropertyCard.hpp  DiceCard.cpp  DiceCard.hpp  DiceControlCard.cpp  DiceControlCard.hpp  DragonGateGame.hpp  DrawFateCard.cpp  DrawFateCard.hpp  EventTile.cpp  EventTile.hpp  FateCard.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  HorseRacing.cpp  HorseRacing.hpp  HospitalTile.cpp  HospitalTile.hpp  InputManager.hpp  Main.cpp  MiniGame.hpp  MiniGameManager.hpp  MinigameManager.cpp  OutputCache.cpp  OutputCache.hpp  Player.cpp  Player.hpp  (+18 more)
monopoly/Cards/: BarrierCard.cpp  BarrierCard.hpp  Card.hpp  DestroyCard.cpp  DestroyCard.hpp  DiceCard.cpp  DiceCard.hpp  FateCard.cpp  FateCard.hpp  RocketCard.cpp  RocketCard.hpp
monopoly/Game/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  Player.cpp  Player.hpp
monopoly/MiniGames/: DragonGateGame.cpp  MiniGameManager.hpp  MinigameManager.cpp
monopoly/Tiles/: CardStore.cpp  CardStore.hpp  EventTile.cpp  HospitalTile.hpp  PropertyTile.cpp  StartTile.cpp  StartTile.hpp  StoreTile.cpp  Tile.hpp
monopoly/Utils/: Utils.cpp  Utils.hpp
monopoly/x64/Debug/: monopoly.exe.recipe  (+2 more)
tests/: CMakeLists.txt  MiniGameManagerTest.cpp
(+9 files in other folders)
